# MLU220-tools

./: .gitmodules  README.md  toolchain-edge.cmake
neon/: .gitignore  CMakeLists.txt  Makefile  build-neon-mlu220edge.sh  check.c  matrix.c  openmp.cpp  rgb.c  toolchain-edge.cmake
neon/rgb_deinterleaving/: CMakeLists.txt  main.cpp
scripts/: build-util-linux-MegPeak.sh  build-util-linux-boost.sh  build-util-linux-mlu220edge.sh
